# ritter-backend

./: .example.env  README.md  main.py  pyproject.toml  test_db.py
app/: config.py  main.py
app/api/: dependencies.py
app/api/models/: __init__.py  activity_log.py  lead.py  notification.py  search_configuration.py  search_history.py  system_settings.py  user.py
app/api/repositories/: __init__.py  activity_log_repository.py  base.py  lead_repository.py  notification_repository.py  role_repository.py  roles_repository.py  search_configuration_repository.py  search_history_repository.py  system_settings_repository.py  user_repository.py
app/api/schemas/: __init__.py  activity_log.py  admin.py  lead.py  notification.py  search.py  system_settings.py  user.py
app/api/services/: __init__.py  activity_log_service.py  lead_service.py  notification_service.py  role_service.py  search_service.py  system_settings_service.py  user_service.py
app/api/v1/: __init__.py  admin.py  auth.py  health.py  layout.py  results.py  router.py  search.py
app/core/: database.py  permissions.py  security.py
models/admin/: admin.sql  endpoints.md
models/analytics/: analytics.sql  endpoints.md
models/auth/: auth.sql  endpoints.md
models/campaigns/: campaigns.sql  endpoints.md
models/dashboard/: dashboard.sql  endpoints.md
models/history/: endpoints.md  history.sql
models/layout/: endpoints.md  layout.sql
models/results/: endpoints.md  results.sql
models/search/: endpoints.md  search.sql
scripts/: format_json.py  make_admin.py  push_json.py
