[project]
name = "ritter-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.4",
    "fastapi[all]>=0.115.12",
    "httpx>=0.28.1",
    "jwt>=1.3.1",
    "psycopg2>=2.9.10",
    "python-jose>=3.5.0",
    "sqlalchemy[sqlite]>=2.0.41",
    "supabase>=2.15.3",
]
